# azerothcore-wotlk

data/sql/custom/db_world/: 2021_10_02_world_class_stat_formulas.sql  2021_11_13_24_00_world_class_stat_values.sql
src/: CMakeLists.txt
src/cmake/compiler/msvc/: settings.cmake
src/common/Utilities/: Util.h
src/server/database/Database/: PreparedStatement.cpp
src/server/database/Database/Implementation/: LoginDatabase.cpp
src/server/game/: CMakeLists.txt
src/server/game/Battlegrounds/: Battleground.h
src/server/game/DungeonFinding/: LFG.h  LFGMgr.cpp
src/server/game/Entities/Creature/: CreatureData.h
src/server/game/Entities/GameObject/: GameObject.cpp  GameObject.h
src/server/game/Entities/Item/: ItemTemplate.h
src/server/game/Entities/Object/: Object.cpp  Object.h
src/server/game/Entities/Player/: Player.cpp  Player.h
src/server/game/Entities/Unit/: StatSystem.cpp  Unit.cpp  Unit.h
src/server/game/Globals/: ObjectMgr.cpp  ObjectMgr.h
src/server/game/Grids/Notifiers/: GridNotifiers.cpp  GridNotifiers.h  GridNotifiersImpl.h
src/server/game/Instances/: InstanceScript.h
src/server/game/Loot/: LootMgr.cpp  LootMgr.h
src/server/game/Mails/: Mail.h
src/server/game/Maps/: Map.cpp  Map.h
src/server/game/Quests/: QuestDef.h
src/server/game/Server/: WorldSession.cpp  WorldSession.h
src/server/game/Server/Protocol/: Opcodes.cpp  Opcodes.h
src/server/game/Spells/: Spell.h  SpellInfo.h
src/server/game/World/: World.cpp
src/server/scripts/: CMakeLists.txt
src/server/scripts/Commands/: cs_learn.cpp  cs_reload.cpp
src/server/scripts/Northrend/FrozenHalls/PitOfSaron/: pit_of_saron.h
src/server/shared/: SharedDefines.h
src/server/worldserver/: CMakeLists.txt  Main.cpp
